--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <div class="container">
         <div class="controls-panel">
+            <div class="usage-instructions">
+                <p class="instructions-text">
+                    <strong>Controls:</strong> Left-click + drag to rotate camera • Right-click + drag balls to move them • Mouse wheel to zoom
+                </p>
+            </div>
+            
             <div class="header">
                 <div class="title-section">
                     <h1>3D Variety Minimization</h1>
